# dominion

./: .gitignore  Dockerfile  Dockerfile.py-poetry  README.md  card_collection.py  card_stack.py  card_util.py  cards.py  computer_player.py  config.py  dominion.py  draw_deck.py  game.py  game_client.py  game_engine.py  game_factory.py  game_state.py  hand.py  human_player.py  object_model.py  personal_state.py  player.py  player_state.py  pyproject.toml  setup.py
client/: client.py
computer_players/: base_computer_player.py  napoleon.py  robin_hood.py  rockefeller.py  simpleton.py  stay_at_home_son.py  the_bureaucrat.py  the_guy.py  victor.py
dominator/: README.md  custom_resource.py  game.py  game_client.py  game_custom_resource.py  game_factory.py  game_operator.py  kube_client.py  player.py  player_custom_resource.py
dominator/crds/: game.yaml  player.yaml
dominator/sample-crs/: dynamite-1.yaml  dynamite-2.yaml  game-1.yaml  game-2.yaml  rocky.yaml  the-guy.yaml
dominion/: card_stack.py  card_util.py  cards.py  game.py  game_client.py  game_factory.py  human_player.py  object_model.py  personal_state.py  player_state.py
dominion_game_engine/: action_handlers.py  card_stack.py  card_util.py  cards.py  game.py  game_client.py  game_factory.py  hand.py  personal_state.py  player_state.py
images/: _crop_cards.py  _generate_pics.py  _grayscale_images.py  grayscale_images.py
k8s/: dominion.yaml
self_test/: README.md  main.py
server/: config.py  dominion_server.py  event_handler.py  main.py  player.py  player_channel.py
tests/: card_stack_test.py  game_engine_test.py  game_test.py  hand_test.py  player_state_test.py
(+20 files in other folders)
