[tool.poetry]
name = "dominion"
version = "0.9.0"
description = ""
authors = ["Gigi <the.gigi@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.2"
PodSixNet = "^0.11.0"
pillow = "^7.2.0"
numpy = "^1.19.0"
pathology = "^0.2"
twine = "^3.2.0"
dominion-object-model = "^1.0.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
