[tool.poetry]
name = "dominion"
version = "1.0.0"
description = ""
authors = ["Gigi <the.gigi@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
PodSixNet = "^0.11.0"
pillow = "^7.2.0"
numpy = "^1.19.0"
pathology = "^0.2"
twine = "^3.2.0"
dominion-object-model = "^1.0.3"
SimpleWebSocketServer = "^0.1.1"
websockets = "^8.1"
grpcio = "^1.30.0"
grpcio-tools = "^1.30.0"
dominion-grpc-proto = "^0.3.0"
dominion_grpc_client = "^0.15.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
